@@ -1,4 +1,5 @@
 <?php
+
 /* * *************************************************************
  *  Copyright notice
  *
@@ -33,8 +34,9 @@ class Tx_Standorte_Domain_Repository_OeffnungszeitenRepository extends Tx_Extbas
 
 		// Sortierung nach Tagen
 		$defaultOrderings = array('wochentag' => Tx_Extbase_Persistence_QueryInterface::ORDER_ASCENDING);
-
-		$this->setDefaultOrderings($defaultOrderings);
+		if (t3lib_div::int_from_ver(TYPO3_version) >= 4005000) {
+			$this->setDefaultOrderings($defaultOrderings);
+		}
 		parent::__construct($objectManager);
 	}
 
