@@ -3,4 +3,3 @@
 ==TODO==
 * Semesterferien? Oeffnungszeiten
 * ist geoeffnet?
-* Manual
