@@ -4,7 +4,7 @@
 	<h2>Fakult&auml;ten</h2>
 	<f:be.tableList tableName="tx_standorte_domain_model_fakultaet"
 					fieldList="{0: 'titel'}"
-					storagePid="1184" levels="2" recordsPerPage="10"
+					levels="2" recordsPerPage="10"
 					sortField="titel" sortDescending="true" readOnly="false"
 					enableClickMenu="true" clickTitleMode="edit"
 					alternateBackgroundColors="true" />
@@ -12,7 +12,7 @@
 	<h2>Bibliotheken</h2>
 	<f:be.tableList tableName="tx_standorte_domain_model_bibliothek"
 					fieldList="{0: 'titel', 1: 'sigel'}"
-					storagePid="1184" levels="2" recordsPerPage="10"
+					levels="2" recordsPerPage="10"
 					sortField="titel" sortDescending="true" readOnly="false"
 					enableClickMenu="true" clickTitleMode="edit"
 					alternateBackgroundColors="true" />
